@@ -1,20 +1,10 @@
 // DESCRIPTION: Verilator: Verilog Test module
 //
 // This file ONLY is placed into the Public Domain, for any use,
-// without warranty, 2024 by Wilson Snyder.
+// without warranty, 2025 by Wilson Snyder.
 // SPDX-License-Identifier: CC0-1.0
 
-typedef enum { ONE } e_t;
-
-typedef struct { int m_i; } s_t;
-
-typedef union { int m_i; } u_t;
-
-class c_t;
-endclass
-
-interface class ic_t;
-endclass
+typedef int int_t;
 
 module sub;
    parameter type enum E_t;
@@ -31,9 +21,9 @@ class Cls #(parameter type enum E_t,
             parameter type interface class IC_t);
 endclass
 
-module t;
-   sub #(.E_t(e_t), .S_t(s_t), .U_t(u_t), .C_t(c_t), .IC_t(ic_t)) sub();
-   Cls #(.E_t(e_t), .S_t(s_t), .U_t(u_t), .C_t(c_t), .IC_t(ic_t)) c;
+module t (/*AUTOARG*/);
+   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
+   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
    initial begin
       c = new;
    end
